<resources>
    <string name="app_name">Мой календарь</string>
    <string name="title">Событие дня</string>
    <string name="event">Название события</string>
    <string name="event_time">Время</string>
    <string name="event_data">Дата</string>
    <string name="ps">Заметки</string>
    <string name="save">OK</string>
    <string name="good">Ах!!!</string>
    <string name="bad">Ох…</string>
</resources>